<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.revere.alley</groupId>
    <artifactId>Alley</artifactId>
    <packaging>jar</packaging>

    <name>Alley</name>
    <description>A modern practice core built from the ground and up</description>
    <version>2.0</version>

    <developers>
        <developer>
            <id>remi</id>
            <name>Remi</name>
            <email>remi@revere.dev</email>
        </developer>
        <developer>
            <id>emmy</id>
            <name>Emmy</name>
            <email>emmy@revere.dev</email>
        </developer>
    </developers>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>refine-public-repo</id>
            <name>Refine Development Repo</name>
            <url>https://maven.refinedev.xyz/public-repo</url>
        </repository>
        <repository>
            <id>cs-arcanearts</id>
            <url>https://dl.cloudsmith.io/public/arcane/archive/maven/</url>
        </repository>
        <repository>
            <id>minebench-repo</id>
            <url>https://repo.minebench.de</url>
        </repository>
        <repository>
            <id>enginehub-maven</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>citizens-repo</id>
            <url>https://maven.citizensnpcs.co/repo</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>dev.revere.spigot</groupId>
            <artifactId>ZoneSpigot</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/zonespigot-api-1.8.8-R0.1-SNAPSHOT.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>4.8.165</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <scope>provided</scope>
        </dependency>

        <!-- Spigot API -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.8.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Bukkit API -->
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>1.8.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>WorldEdit</artifactId>
            <version>6.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FAWE</artifactId>
            <version>7.0.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/FAWE.jar</systemPath>
        </dependency>

        <!-- ProtocolLib -->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>4.4.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- MongoDB -->
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>4.11.1</version>
        </dependency>

        <!-- MongoDB Java Driver -->
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.9.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/me.clip/placeholderapi -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.bukkit.craftbukkit/1.8.8 -->
        <dependency>
            <groupId>org.bukkit.craftbukkit</groupId>
            <artifactId>1.8.8</artifactId>
            <version>1.8.8</version>
        </dependency>

        <!-- Reflections -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>

        <!-- Citizens API -->
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizensapi</artifactId>
            <version>2.0.27-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <!-- Helium API -->
        <dependency>
            <groupId>com.github.PlasmaServices</groupId>
            <artifactId>HeliumAPI</artifactId>
            <version>latest-build</version>
        </dependency>

        <!-- Phoenix API -->
        <dependency>
            <groupId>xyz.refinedev.phoenix</groupId>
            <artifactId>pxAPI</artifactId>
            <version>1.8.6</version>
            <scope>provided</scope>
        </dependency>

        <!-- AquaCore API -->
        <dependency>
            <groupId>me.activated.core</groupId>
            <artifactId>core-api</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
